--- a/Dauber/Views/Shared/_Layout.cshtml
+++ b/Dauber/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
                 @Html.ActionLink("Dauber", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                @*<ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Tools for coaches, by coaches", "Index", "Home")</li>
-                </ul>
+                </ul>*@
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
