--- a/Dauber/Views/MyAccount/Index.cshtml
+++ b/Dauber/Views/MyAccount/Index.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Dauber.Models.MyAccountIndexViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "My Account";
 }
 
-<h2>Index</h2>
+<h3>My Account</h3>
 
 <div>
-    <h4>MyAccountIndexViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -44,6 +43,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
+    <input type="button" class="btn btn-primary btn-sm" value="Change Plan" onclick="location.href = '@Url.Action("Plan", "MyAccount")'"/>
+    <input type="button" class="btn btn-default btn-sm" value="Update Card" onclick="location.hrer ='@Url.Action("UpdateCard", "MyAccount")'"/>
 </p>
