Added stripe.js for token creation

--- a/Dauber/Views/MyAccount/Index.cshtml
+++ b/Dauber/Views/MyAccount/Index.cshtml
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <p>
-    <input type="button" class="btn btn-primary btn-sm" value="Change Plan" onclick="location.href = '@Url.Action("Plan", "MyAccount")'"/>
+    <input type="button" class="btn btn-primary btn-sm" value="Change Plan" onclick="location.href = '@Url.Action("UpdatePlan", "MyAccount")'"/>
     <input type="button" class="btn btn-default btn-sm" value="Update Card" onclick="location.hrer ='@Url.Action("UpdateCard", "MyAccount")'"/>
 </p>
