Added plans page

--- a/Dauber/Views/Home/Index.cshtml
+++ b/Dauber/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <h3>Are you frustrated by MyFitnessPal's lack of tools and support for coaches?</h3>
     <p>
         The first Dauber allows you to easily import your client's MyFitnessPal diary into Google Sheets.<br />
-        Save yourself and your clients both the time and hassle of entering this manually, and <a href="mailto:chuckgross@gmail.com?subject=I am interested in Dauber!">sign up for Dauber today!</a>
+        Save yourself and your clients both the time and hassle of entering this manually, and <input type="button" class="btn btn-success btn-sm" value="SIGN UP" onclick="location.href = '@Url.Action("UpdatePlan", "MyAccount")'" /> now!
     </p>
     <p>
         <img src="~/Images/dauberExample.gif" alt="Dauber Example" />
