--- a/Dauber/Views/Shared/_Layout.cshtml
+++ b/Dauber/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>Dauber - @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @*@RenderSection("HeadSection", false)*@
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
