--- a/Dauber/Views/MyAccount/Index.cshtml
+++ b/Dauber/Views/MyAccount/Index.cshtml
@@ -40,6 +40,14 @@
         <dd>
             @Html.DisplayFor(model => model.MaxClients)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.HasCardOnFile)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.HasCardOnFile)
+        </dd>
     </dl>
 </div>
 <p>
