--- a/Dauber/Views/Plans/Index.cshtml
+++ b/Dauber/Views/Plans/Index.cshtml
@@ -1,11 +1,12 @@
-﻿@*@section HeadSection{
+﻿@{
+    ViewBag.Title = "Plans";
+}
+
+@*@section HeadSection{
        @Styles.Render("~/Content/plans")
         http://bootsnipp.com/snippets/featured/pricing-table-bs-3
     }*@
 
-@{
-    ViewBag.Title = "Plans";
-}
 <br />
 
 <div class="container">
