Added clarification around acceptance of email communication

--- a/Dauber/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Dauber/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -26,7 +26,7 @@
                     </strong>
                     <ul>
                         <li>I have read and accepted the <a href="#" onclick=" location.href='@Url.Action("TermsAndConditions", "Home")' ">Terms and Conditions</a>.</li>
-                        <li>I may receive communications from the Dauber team.</li>
+                        <li>I may receive communications from the Dauber team (including, but not limited to email).</li>
                         <li>I am at least 18 years old.</li>
                     </ul>
                 </p>
