--- a/Dauber/Views/Clients/Add.cshtml
+++ b/Dauber/Views/Clients/Add.cshtml
@@ -13,6 +13,15 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.UserId)
+        @Html.HiddenFor(model => model.FitocracyId)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ClientName, new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ClientName, new {htmlAttributes = new {@class = "form-control", style = "width:425px", maxlength = "50"}})
+                @Html.ValidationMessageFor(model => model.ClientName, "", new {@class = "text-danger"})
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.ClientUserName, new { @class = "control-label col-md-2" })
@@ -23,12 +32,13 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClientName, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FitocracyUserName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control", style = "width:425px", maxlength = "50" } })
-                @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.FitocracyUserName, new { htmlAttributes = new { @class = "form-control", style = "width:425px", maxlength = "30" } })
+                @Html.ValidationMessageFor(model => model.FitocracyUserName, "", new { @class = "text-danger" })
             </div>
         </div>
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
