--- a/Dauber/Views/Clients/Edit.cshtml
+++ b/Dauber/Views/Clients/Edit.cshtml
@@ -8,12 +8,22 @@
 @using (Html.BeginForm("Edit", "Clients", FormMethod.Post, new { id = "clientsEdit" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.UserId)
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.FitocracyId)
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ClientName, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control", style = "width:425px", maxlength = "50" } })
+                @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.ClientUserName, new { @class = "control-label col-md-2" })
@@ -24,10 +34,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClientName, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FitocracyUserName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control", style = "width:425px", maxlength = "50" } })
-                @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.FitocracyUserName, new { htmlAttributes = new { @class = "form-control", style = "width:425px", maxlength = "50" } })
+                @Html.ValidationMessageFor(model => model.FitocracyUserName, "", new { @class = "text-danger" })
             </div>
         </div>
 
