Added Ben pictures/testimonial

--- a/Dauber/Views/Testimonials/Index.cshtml
+++ b/Dauber/Views/Testimonials/Index.cshtml
@@ -34,17 +34,17 @@
                         <blockquote>
                             <div class="row">
                                 <div class="col-sm-3 text-center">
-                                    <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" style="width: 100px;height:100px;">
+                                    <img class="img-circle" src="~/Images/ben.jpg" style="width: 100px;height:100px;">
                                 </div>
                                 <div class="col-sm-9">
-                                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
-                                    <small>Someone famous</small>
+                                    <p>I provide macro targets for my clients and ask them to log their daily macros in a spreadsheet. Many of them use MFP to track their food intake. Dauber makes it easy for them to provide the macros for me without duplication of effort. That makes it easier for me to keep them on track too. I would recommend Dauber to any coaches who want to streamline the process of tracking their client's macros. The pricing structure makes it affordable even if you have a large client base.</p>
+                                    <small><a href="http://www.benjamintormey.com" target="_blank">Ben Tormey (Director, Benjamin Tormey Limited)</a></small>
                                 </div>
                             </div>
                         </blockquote>
                     </div>
                     <!-- Quote 2 -->
-                    <div class="item">
+                    @*<div class="item">
                         <blockquote>
                             <div class="row">
                                 <div class="col-sm-3 text-center">
@@ -56,9 +56,9 @@
                                 </div>
                             </div>
                         </blockquote>
-                    </div>
+                    </div>*@
                     <!-- Quote 3 -->
-                    <div class="item">
+                    @*<div class="item">
                         <blockquote>
                             <div class="row">
                                 <div class="col-sm-3 text-center">
@@ -70,7 +70,7 @@
                                 </div>
                             </div>
                         </blockquote>
-                    </div>
+                    </div>*@
                 </div>
 
                 <!-- Carousel Buttons Next/Prev -->
