Added fitocracy scrape example

--- a/Dauber/Views/Clients/Index.cshtml
+++ b/Dauber/Views/Clients/Index.cshtml
@@ -5,24 +5,27 @@
 }
 <div class="well">
     <h2>Using Dauber</h2>
-    <p class="lead">Dauber is an API that can be uesd to import your client's MFP diary information.</p>
+    <p class="lead">Dauber is an API that can be uesd to import your client's MFP diary information or get a count of workouts from Fitocracy.</p>
     @{
-        var url = "http://dauber.apphb.com/api/v1/diary/" + Model.CoachId + "/{username}/{date}";
-
+        var mfpUrl = "http://dauber.apphb.com/api/v1/diary/" + Model.CoachId + "/{MyFitnessPalUsername}/{date}";
+        var fitoUrl = "http://dauber.apphb.com/api/v1/fitocracy/" + Model.CoachId + "/{FitocracyUsername}/{date}";
     }
-    <label for="apiExample">Your custom API URL: </label>&nbsp;&nbsp;&nbsp;<input type="text" name="apiExample" id="apiExample" disabled value="@url" style="width:400px "><br /><br />
+    <label for="apiExampleMFP">Your MFP Diary API URL: </label>&nbsp;&nbsp;&nbsp;<input type="text" name="apiExampleMFP" id="apiExampleMFP" disabled value="@mfpUrl" style="width:500px "><br />
+    <label for="apiExampleFito">Your Fitocracy API URL: </label>&nbsp;&nbsp;&nbsp;<input type="text" name="apiExampleFito" id="apiExampleFito" disabled value="@fitoUrl" style="width:500px "><br /><br />
     <p>
-        The number in the above URL after the word diary is your Coach Id.<br/>
-        Replace {username} with your client's MFP username, and {date} with a date formatted like "05-20-2015".<br/>
-        You can only access the diary of clients added to your account, and their diaries must be public.
+        The number in the above URLs after the word diary or fitocracy is your Coach Id.<br/>
+        Replace the usernames with your client's usernames, and {date} with a date formatted as double digit month-double digit day-four digit year. E.g., "05-20-2015".<br/>
+        You can only access the diary or Fitocracy feed of clients added to your account, and their MFP diary must be public.
     </p>
     <br/>
     @{
-        var formula = "=IMPORTDATA(CONCATENATE('https://dauber.apphb.com/api/v1/diary/'" + Model.CoachId + "',$A$1,'/',TEXT(A2'mm-DD-yyyy')))";
-    }
-    <label for="sheetsExample">Usage in Google Sheets: </label>&nbsp;&nbsp;&nbsp;<input type="text" name="sheetsExample" id="sheetsExample" disabled value="@formula" style="width: 750px"><br/><br/>
-    <p>In the above example, the client username goes in Cell A1, and the date does in A2.<br/>
-        I have an example Google Sheet where I am using this formula to pull my MFP diary info in.<br/>
+        var mfpFormula = "=IMPORTDATA(CONCATENATE('https://dauber.apphb.com/api/v1/diary/" + Model.CoachId + "',$A$1,'/',TEXT(A2'mm-DD-yyyy')))";
+        var fitoFormula = "=IMPORTDATA(CONCATENATE('https://dauber.apphb.com/api/v1/fitocracy/" + Model.CoachId + "',$A$1,'/',TEXT(A2'mm-DD-yyyy')))";
+     }
+    <label for="sheetsExampleMFP">MFP Diary usage in Google Sheets: </label>&nbsp;&nbsp;&nbsp;<input type="text" name="sheetsExampleMFP" id="sheetsExampleMFP" disabled value="@mfpFormula" style="width: 750px"><br/>
+    <label for="sheetsExampleFito">Fitocracy usage in Google Sheets: </label>&nbsp;&nbsp;&nbsp;<input type="text" name="sheetsExampleFito" id="sheetsExampleFito" disabled value="@fitoFormula" style="width: 775px"><br /><br />
+    <p>In the above examples, the client username goes in Cell A1, and the date does in A2.<br/>
+        I have an example Google Sheet that shows how to use both APIs!<br/>
     Please message me and I'll add you to it so that you can try it out!
     </p>
 </div>
