Updated plans and testimonials

--- a/Dauber/Views/Plans/Index.cshtml
+++ b/Dauber/Views/Plans/Index.cshtml
@@ -14,56 +14,40 @@
         <div class="col-sm-3 col-md-3">
             <div class="well">
                 <h2 class="text-muted">Free</h2>
-                <p><span class="label label-default">Default Plan</span></p>
+                @*<p><span class="label label-default">Default Plan</span></p>*@
                 <ul>
-                    <li>Up to 10 clients</li>
+                    <li>Up to 5 clients</li>
                     <li>Limited support</li>
                 </ul>
                 @*<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>*@
                 <hr>
-                <h3>$0 / month</h3>
+                <h3>Free!</h3>
                 <hr>
-                <p><input type="button" class="btn btn-default btn-sm" value="Select Plan" onclick="location.href = '@Url.Action("UpdatePlan", "MyAccount")'" /></p>
-            </div>
-        </div>
-        <div class="col-sm-3 col-md-3">
-            <div class="well">
-                <h2 class="text-success">Mithril</h2>
-                <p><span class="label label-success">POPULAR</span></p>
-                <ul>
-                    <li>Up to 50 clients</li>
-                    <li>Unlimited support</li>
-                </ul>
-                @*<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>*@
-                <hr>
-                <h3>$50 / month</h3>
-                <hr>
-                <p>
-                    <input type="button" class="btn btn-success btn-sm" value="Select Plan" onclick="location.href = '@Url.Action("UpdatePlan", "MyAccount")'" />
+                <p><input type="button" class="btn btn-default btn-sm" value="Select Plan" onclick=" location.href = '@Url.Action("UpdatePlan", "MyAccount")' "/>
                 </p>
             </div>
         </div>
         <div class="col-sm-3 col-md-3">
             <div class="well">
-                <h2 class="text-success">Mithril</h2>
-                <p><span class="label label-success">POPULAR</span></p>
+                <h2 class="text-success">Pro</h2>
+                @*<p><span class="label label-success">POPULAR</span></p>*@
                 <ul>
-                    <li>Up to 50 clients</li>
+                    <li>Up to 25 clients</li>
                     <li>Unlimited support</li>
                 </ul>
                 @*<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>*@
                 <hr>
-                <h3>$50 / month</h3>
+                <h3>$30 / month</h3>
                 <hr>
                 <p>
-                    <input type="button" class="btn btn-success btn-sm" value="Select Plan" onclick="location.href = '@Url.Action("UpdatePlan", "MyAccount")'" />
+                    <input type="button" class="btn btn-success btn-sm" value="Select Plan" onclick=" location.href = '@Url.Action("UpdatePlan", "MyAccount")' "/>
                 </p>
             </div>
         </div>
         <div class="col-sm-3 col-md-3">
             <div class="well">
-                <h2 class="text-success">Mithril</h2>
-                <p><span class="label label-success">POPULAR</span></p>
+                <h2 class="text-warning">Elite</h2>
+                @*<p><span class="label label-success">POPULAR</span></p>*@
                 <ul>
                     <li>Up to 50 clients</li>
                     <li>Unlimited support</li>
@@ -73,9 +57,15 @@
                 <h3>$50 / month</h3>
                 <hr>
                 <p>
-                    <input type="button" class="btn btn-success btn-sm" value="Select Plan" onclick="location.href = '@Url.Action("UpdatePlan", "MyAccount")'" />
+                    <input type="button" class="btn btn-warning btn-sm" value="Select Plan" onclick=" location.href = '@Url.Action("UpdatePlan", "MyAccount")' "/>
                 </p>
             </div>
         </div>
     </div>
+    <br/>
+    <div>
+        <h3>
+            Have more than 50 clients? <a href="mailto:chuck@chuckgrossfitness.com">Let's talk!</a>
+        </h3>
+             </div>
 </div>
