--- a/Dauber/Views/Testimonials/Index.cshtml
+++ b/Dauber/Views/Testimonials/Index.cshtml
@@ -37,7 +37,7 @@
                                     <img class="img-circle" src="~/Images/ben.jpg" style="width: 100px;height:100px;">
                                 </div>
                                 <div class="col-sm-9">
-                                    <p>I provide macro targets for my clients and ask them to log their daily macros in a spreadsheet. Many of them use MFP to track their food intake. Dauber makes it easy for them to provide the macros for me without duplication of effort. That makes it easier for me to keep them on track too. I would recommend Dauber to any coaches who want to streamline the process of tracking their client's macros. The pricing structure makes it affordable even if you have a large client base.</p>
+                                    <p>I provide macro targets for my clients and ask them to log their daily macros in a spreadsheet. Many of them use MFP to track their food intake. Dauber makes it easy for them to provide the macros for me without duplication of effort. That makes it easier for me to keep them on track too. I would recommend Dauber to any coaches who want to streamline the process of tracking their clients' macros. The pricing structure makes it affordable even if you have a large client base.</p>
                                     <small><a href="http://www.benjamintormey.com" target="_blank">Ben Tormey (Director, Benjamin Tormey Limited)</a></small>
                                 </div>
                             </div>
