Updated index page

--- a/Dauber/Views/Home/Index.cshtml
+++ b/Dauber/Views/Home/Index.cshtml
@@ -2,7 +2,47 @@
     ViewBag.Title = "Coaching Tools";
 }
 
-<div class="well">
+@section HeadSection{
+       @Styles.Render("~/Content/onepagewonder")
+    }
+<div>
+    
+        <h2>Dauber</h2>
+        <h3>The revolutionary tool for fitness client tracking</h3>
+
+</div>
+<hr class="featurette-divider">
+<!-- First Featurette -->
+<div class="featurette" id="about">
+    <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+    <h2 class="featurette-heading">
+        Dauber
+        <span class="text-muted">Will Automate Gathering Nutrition Data From MyFitnessPal</span>
+    </h2>
+    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+</div>
+<hr class="featurette-divider">
+<!-- Second Featurette -->
+<div class="featurette" id="services">
+    <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+    <h2 class="featurette-heading">
+        The Second Heading
+        <span class="text-muted">Is Pretty Cool Too.</span>
+    </h2>
+    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+</div>
+<hr class="featurette-divider">
+<!-- Third Featurette -->
+<div class="featurette" id="contact">
+    <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+    <h2 class="featurette-heading">
+        The Third Heading
+        <span class="text-muted">Will Seal the Deal.</span>
+    </h2>
+    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+</div>
+<hr class="featurette-divider">
+@*<div class="well">
     <h1>Dauber</h1>
     <h2>Tools for coaches, by coaches</h2>
     <p class="lead">Dauber is a suite of tools created to make the collection of data easier for both you and your clients!</p>
@@ -36,5 +76,5 @@
                 <img src="~/Images/fitocracyExample.gif" alt="Dauber Fitocracy Example" />
             </p>
         </div>
-    </div>
+    </div>*@
 
